k8s/APIDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
        labels:
          app: media-api
    spec:
     containers:
        - name: media-api-ct
          #image: docker.io/pranjalpohre/k8-dotnetapi:1.0
          image: docker.io/pranjalpohre/media-api:1.0.__TAG__
          imagePullPolicy: IfNotPresent  
          ports:
          - containerPort: 8080
