k8s/MySQLServicee.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
