k8s/APIIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: dev
  annotations:
    # Use the correct annotation for your specific controller (e.g., NGINX)
    kubernetes.io/ingress.class: "nginx" 
    # For NGINX rewrite, if necessary (e.g., path /products maps to app root /)
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
    - host: media.com
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: media-api-svc
              port:
                number: 80
